Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BARRA
    CLASS
    CONTINUE
    ERR
    GBAJO
    LIST
    LOCAL
    NONE
    POT
    PUNTO
    PYC
    REFER
    STRUCT

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> funcion
Rule 5     instruccion -> declaracion
Rule 6     instruccion -> asignacion
Rule 7     lista_bloque -> lista_bloque bloque
Rule 8     lista_bloque -> bloque
Rule 9     bloque -> impresiones
Rule 10    bloque -> declaracion
Rule 11    bloque -> start_while
Rule 12    bloque -> break_ins
Rule 13    bloque -> start_if
Rule 14    bloque -> start_for
Rule 15    bloque -> llamada
Rule 16    bloque -> return_ins
Rule 17    bloque -> asignacion
Rule 18    bloque -> asignacion_arreglo
Rule 19    bloque -> <empty>
Rule 20    funcion -> LI lista_bloque LD
Rule 21    funcion -> DEF ID PI parametros PD LI lista_bloque LD
Rule 22    funcion -> DEF ID PI parametros PD tipo_datos LI lista_bloque LD
Rule 23    parametros -> parametros COMA definiciones
Rule 24    parametros -> definiciones
Rule 25    definiciones -> ID tipado
Rule 26    impresiones -> PRINTLN PI CADENA PD
Rule 27    impresiones -> PRINT PI CADENA PD
Rule 28    impresiones -> PRINTLN PI CADENA COMA impresion_valores PD
Rule 29    impresiones -> PRINT PI CADENA COMA impresion_valores PD
Rule 30    impresion_valores -> impresion_valores COMA expresiones
Rule 31    impresion_valores -> expresiones
Rule 32    declaracion -> ID tipado
Rule 33    declaracion -> ID IGUAL expresiones
Rule 34    declaracion -> ID tipado IGUAL expresiones
Rule 35    lista_Variables -> lista_Variables COMA ID
Rule 36    lista_Variables -> ID
Rule 37    start_if -> IF expresiones DP LI list_exp_ins LD
Rule 38    start_if -> IF expresiones DP LI list_exp_ins LD ELSE DP LI list_exp_ins LD
Rule 39    start_if -> IF expresiones DP LI list_exp_ins LD lista_elif
Rule 40    start_if -> IF expresiones DP LI list_exp_ins LD lista_elif ELSE DP LI list_exp_ins LD
Rule 41    lista_elif -> lista_elif else_if
Rule 42    lista_elif -> else_if
Rule 43    else_if -> ELIF expresiones DP LI list_exp_ins LD
Rule 44    list_exp_ins -> list_exp_ins bloque_exp
Rule 45    list_exp_ins -> bloque_exp
Rule 46    return_ins -> RETURN
Rule 47    return_ins -> RETURN expresiones
Rule 48    asignacion -> ID IGUAL expresiones
Rule 49    bloque_exp -> bloque
Rule 50    bloque_exp -> expresiones
Rule 51    llamada -> ID PI PD
Rule 52    llamada -> ID PI lista_expres PD
Rule 53    lista_expres -> lista_expres COMA expresiones
Rule 54    lista_expres -> expresiones
Rule 55    start_while -> WHILE expresiones LI lista_bloque LD
Rule 56    start_for -> FOR ID IN opciones_for LI lista_bloque LD
Rule 57    opciones_for -> expresiones
Rule 58    opciones_for -> RANGE PI expresiones PD
Rule 59    asignacion_arreglo -> acceso_arreglo IGUAL expresiones
Rule 60    acceso_arreglo -> ID dimensiones
Rule 61    dimensiones -> dimensiones dimension
Rule 62    dimensiones -> dimension
Rule 63    dimension -> CI expresiones CD
Rule 64    tipado -> DP tipo_datos
Rule 65    tipado -> <empty>
Rule 66    tipo_datos -> TIPOINT
Rule 67    tipo_datos -> TIPOFLOAT
Rule 68    tipo_datos -> TIPOCHAR
Rule 69    tipo_datos -> TIPOSTRING
Rule 70    tipo_datos -> TIPOBOOL
Rule 71    tipo_datos -> ID
Rule 72    break_ins -> BREAK
Rule 73    break_ins -> BREAK expresiones
Rule 74    expresiones -> expre_logica
Rule 75    expresiones -> expre_relacional
Rule 76    expresiones -> expre_aritmetica
Rule 77    expresiones -> datos
Rule 78    expresiones -> expre_valor
Rule 79    expre_valor -> start_if
Rule 80    expre_valor -> datos
Rule 81    expre_valor -> arreglo_init
Rule 82    expre_valor -> acceso_arreglo
Rule 83    expre_valor -> llamada
Rule 84    expre_valor -> datos_cast
Rule 85    datos_cast -> datos
Rule 86    datos_cast -> tipo_datos PI expresiones PD
Rule 87    arreglo_init -> CI lista_Expresiones CD
Rule 88    lista_Expresiones -> lista_Expresiones COMA expresiones
Rule 89    lista_Expresiones -> expresiones
Rule 90    expre_logica -> expresiones OR expresiones
Rule 91    expre_logica -> expresiones AND expresiones
Rule 92    expre_logica -> NOT expresiones
Rule 93    expre_relacional -> expresiones MAYORIGUAL expresiones
Rule 94    expre_relacional -> expresiones MAYOR expresiones
Rule 95    expre_relacional -> expresiones MENORIGUAL expresiones
Rule 96    expre_relacional -> expresiones MENOR expresiones
Rule 97    expre_relacional -> expresiones IGUALDAD expresiones
Rule 98    expre_relacional -> expresiones DESIGUALDAD expresiones
Rule 99    expre_aritmetica -> RESTA expresiones
Rule 100   expre_aritmetica -> PI expresiones PD
Rule 101   expre_aritmetica -> expresiones RESTA expresiones
Rule 102   expre_aritmetica -> expresiones SUMA expresiones
Rule 103   expre_aritmetica -> expresiones MULTI expresiones
Rule 104   expre_aritmetica -> expresiones DIVI expresiones
Rule 105   expre_aritmetica -> expresiones MODULO expresiones
Rule 106   datos -> ENTERO
Rule 107   datos -> FLOAT
Rule 108   datos -> CADENA
Rule 109   datos -> CARACTER
Rule 110   datos -> ID
Rule 111   datos -> TRUE
Rule 112   datos -> FALSE

Terminals, with rules where they appear

AND                  : 91
BARRA                : 
BREAK                : 72 73
CADENA               : 26 27 28 29 108
CARACTER             : 109
CD                   : 63 87
CI                   : 63 87
CLASS                : 
COMA                 : 23 28 29 30 35 53 88
CONTINUE             : 
DEF                  : 21 22
DESIGUALDAD          : 98
DIVI                 : 104
DP                   : 37 38 38 39 40 40 43 64
ELIF                 : 43
ELSE                 : 38 40
ENTERO               : 106
ERR                  : 
FALSE                : 112
FLOAT                : 107
FOR                  : 56
GBAJO                : 
ID                   : 21 22 25 32 33 34 35 36 48 51 52 56 60 71 110
IF                   : 37 38 39 40
IGUAL                : 33 34 48 59
IGUALDAD             : 97
IN                   : 56
LD                   : 20 21 22 37 38 38 39 40 40 43 55 56
LI                   : 20 21 22 37 38 38 39 40 40 43 55 56
LIST                 : 
LOCAL                : 
MAYOR                : 94
MAYORIGUAL           : 93
MENOR                : 96
MENORIGUAL           : 95
MODULO               : 105
MULTI                : 103
NONE                 : 
NOT                  : 92
OR                   : 90
PD                   : 21 22 26 27 28 29 51 52 58 86 100
PI                   : 21 22 26 27 28 29 51 52 58 86 100
POT                  : 
PRINT                : 27 29
PRINTLN              : 26 28
PUNTO                : 
PYC                  : 
RANGE                : 58
REFER                : 
RESTA                : 99 101
RETURN               : 46 47
STRUCT               : 
SUMA                 : 102
TIPOBOOL             : 70
TIPOCHAR             : 68
TIPOFLOAT            : 67
TIPOINT              : 66
TIPOSTRING           : 69
TRUE                 : 111
WHILE                : 55
error                : 

Nonterminals, with rules where they appear

acceso_arreglo       : 59 82
arreglo_init         : 81
asignacion           : 6 17
asignacion_arreglo   : 18
bloque               : 7 8 49
bloque_exp           : 44 45
break_ins            : 12
datos                : 77 80 85
datos_cast           : 84
declaracion          : 5 10
definiciones         : 23 24
dimension            : 61 62
dimensiones          : 60 61
else_if              : 41 42
expre_aritmetica     : 76
expre_logica         : 74
expre_relacional     : 75
expre_valor          : 78
expresiones          : 30 31 33 34 37 38 39 40 43 47 48 50 53 54 55 57 58 59 63 73 86 88 89 90 90 91 91 92 93 93 94 94 95 95 96 96 97 97 98 98 99 100 101 101 102 102 103 103 104 104 105 105
funcion              : 4
impresion_valores    : 28 29 30
impresiones          : 9
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
list_exp_ins         : 37 38 38 39 40 40 43 44
lista_Expresiones    : 87 88
lista_Variables      : 35
lista_bloque         : 7 20 21 22 55 56
lista_elif           : 39 40 41
lista_expres         : 52 53
llamada              : 15 83
opciones_for         : 56
parametros           : 21 22 23
return_ins           : 16
start_for            : 14
start_if             : 13 79
start_while          : 11
tipado               : 25 32 34
tipo_datos           : 22 64 86

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . funcion
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion
    (20) funcion -> . LI lista_bloque LD
    (21) funcion -> . DEF ID PI parametros PD LI lista_bloque LD
    (22) funcion -> . DEF ID PI parametros PD tipo_datos LI lista_bloque LD
    (32) declaracion -> . ID tipado
    (33) declaracion -> . ID IGUAL expresiones
    (34) declaracion -> . ID tipado IGUAL expresiones
    (48) asignacion -> . ID IGUAL expresiones

    LI              shift and go to state 7
    DEF             shift and go to state 8
    ID              shift and go to state 9

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    funcion                        shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . funcion
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion
    (20) funcion -> . LI lista_bloque LD
    (21) funcion -> . DEF ID PI parametros PD LI lista_bloque LD
    (22) funcion -> . DEF ID PI parametros PD tipo_datos LI lista_bloque LD
    (32) declaracion -> . ID tipado
    (33) declaracion -> . ID IGUAL expresiones
    (34) declaracion -> . ID tipado IGUAL expresiones
    (48) asignacion -> . ID IGUAL expresiones

    $end            reduce using rule 1 (init -> instrucciones .)
    LI              shift and go to state 7
    DEF             shift and go to state 8
    ID              shift and go to state 9

    instruccion                    shift and go to state 10
    funcion                        shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6

state 3

    (3) instrucciones -> instruccion .

    LI              reduce using rule 3 (instrucciones -> instruccion .)
    DEF             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> funcion .

    LI              reduce using rule 4 (instruccion -> funcion .)
    DEF             reduce using rule 4 (instruccion -> funcion .)
    ID              reduce using rule 4 (instruccion -> funcion .)
    $end            reduce using rule 4 (instruccion -> funcion .)


state 5

    (5) instruccion -> declaracion .

    LI              reduce using rule 5 (instruccion -> declaracion .)
    DEF             reduce using rule 5 (instruccion -> declaracion .)
    ID              reduce using rule 5 (instruccion -> declaracion .)
    $end            reduce using rule 5 (instruccion -> declaracion .)


state 6

    (6) instruccion -> asignacion .

    LI              reduce using rule 6 (instruccion -> asignacion .)
    DEF             reduce using rule 6 (instruccion -> asignacion .)
    ID              reduce using rule 6 (instruccion -> asignacion .)
    $end            reduce using rule 6 (instruccion -> asignacion .)


state 7

    (20) funcion -> LI . lista_bloque LD
    (7) lista_bloque -> . lista_bloque bloque
    (8) lista_bloque -> . bloque
    (9) bloque -> . impresiones
    (10) bloque -> . declaracion
    (11) bloque -> . start_while
    (12) bloque -> . break_ins
    (13) bloque -> . start_if
    (14) bloque -> . start_for
    (15) bloque -> . llamada
    (16) bloque -> . return_ins
    (17) bloque -> . asignacion
    (18) bloque -> . asignacion_arreglo
    (19) bloque -> .
    (26) impresiones -> . PRINTLN PI CADENA PD
    (27) impresiones -> . PRINT PI CADENA PD
    (28) impresiones -> . PRINTLN PI CADENA COMA impresion_valores PD
    (29) impresiones -> . PRINT PI CADENA COMA impresion_valores PD
    (32) declaracion -> . ID tipado
    (33) declaracion -> . ID IGUAL expresiones
    (34) declaracion -> . ID tipado IGUAL expresiones
    (55) start_while -> . WHILE expresiones LI lista_bloque LD
    (72) break_ins -> . BREAK
    (73) break_ins -> . BREAK expresiones
    (37) start_if -> . IF expresiones DP LI list_exp_ins LD
    (38) start_if -> . IF expresiones DP LI list_exp_ins LD ELSE DP LI list_exp_ins LD
    (39) start_if -> . IF expresiones DP LI list_exp_ins LD lista_elif
    (40) start_if -> . IF expresiones DP LI list_exp_ins LD lista_elif ELSE DP LI list_exp_ins LD
    (56) start_for -> . FOR ID IN opciones_for LI lista_bloque LD
    (51) llamada -> . ID PI PD
    (52) llamada -> . ID PI lista_expres PD
    (46) return_ins -> . RETURN
    (47) return_ins -> . RETURN expresiones
    (48) asignacion -> . ID IGUAL expresiones
    (59) asignacion_arreglo -> . acceso_arreglo IGUAL expresiones
    (60) acceso_arreglo -> . ID dimensiones

  ! shift/reduce conflict for PRINTLN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    LD              reduce using rule 19 (bloque -> .)
    PRINTLN         shift and go to state 23
    PRINT           shift and go to state 24
    ID              shift and go to state 25
    WHILE           shift and go to state 26
    BREAK           shift and go to state 27
    IF              shift and go to state 28
    FOR             shift and go to state 29
    RETURN          shift and go to state 30

  ! PRINTLN         [ reduce using rule 19 (bloque -> .) ]
  ! PRINT           [ reduce using rule 19 (bloque -> .) ]
  ! ID              [ reduce using rule 19 (bloque -> .) ]
  ! WHILE           [ reduce using rule 19 (bloque -> .) ]
  ! BREAK           [ reduce using rule 19 (bloque -> .) ]
  ! IF              [ reduce using rule 19 (bloque -> .) ]
  ! FOR             [ reduce using rule 19 (bloque -> .) ]
  ! RETURN          [ reduce using rule 19 (bloque -> .) ]

    lista_bloque                   shift and go to state 11
    bloque                         shift and go to state 12
    impresiones                    shift and go to state 13
    declaracion                    shift and go to state 14
    start_while                    shift and go to state 15
    break_ins                      shift and go to state 16
    start_if                       shift and go to state 17
    start_for                      shift and go to state 18
    llamada                        shift and go to state 19
    return_ins                     shift and go to state 20
    asignacion                     shift and go to state 21
    asignacion_arreglo             shift and go to state 22
    acceso_arreglo                 shift and go to state 31

state 8

    (21) funcion -> DEF . ID PI parametros PD LI lista_bloque LD
    (22) funcion -> DEF . ID PI parametros PD tipo_datos LI lista_bloque LD

    ID              shift and go to state 32


state 9

    (32) declaracion -> ID . tipado
    (33) declaracion -> ID . IGUAL expresiones
    (34) declaracion -> ID . tipado IGUAL expresiones
    (48) asignacion -> ID . IGUAL expresiones
    (64) tipado -> . DP tipo_datos
    (65) tipado -> .

  ! shift/reduce conflict for IGUAL resolved as shift
    IGUAL           shift and go to state 34
    DP              shift and go to state 35
    LI              reduce using rule 65 (tipado -> .)
    DEF             reduce using rule 65 (tipado -> .)
    ID              reduce using rule 65 (tipado -> .)
    $end            reduce using rule 65 (tipado -> .)

  ! IGUAL           [ reduce using rule 65 (tipado -> .) ]

    tipado                         shift and go to state 33

state 10

    (2) instrucciones -> instrucciones instruccion .

    LI              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DEF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 11

    (20) funcion -> LI lista_bloque . LD
    (7) lista_bloque -> lista_bloque . bloque
    (9) bloque -> . impresiones
    (10) bloque -> . declaracion
    (11) bloque -> . start_while
    (12) bloque -> . break_ins
    (13) bloque -> . start_if
    (14) bloque -> . start_for
    (15) bloque -> . llamada
    (16) bloque -> . return_ins
    (17) bloque -> . asignacion
    (18) bloque -> . asignacion_arreglo
    (19) bloque -> .
    (26) impresiones -> . PRINTLN PI CADENA PD
    (27) impresiones -> . PRINT PI CADENA PD
    (28) impresiones -> . PRINTLN PI CADENA COMA impresion_valores PD
    (29) impresiones -> . PRINT PI CADENA COMA impresion_valores PD
    (32) declaracion -> . ID tipado
    (33) declaracion -> . ID IGUAL expresiones
    (34) declaracion -> . ID tipado IGUAL expresiones
    (55) start_while -> . WHILE expresiones LI lista_bloque LD
    (72) break_ins -> . BREAK
    (73) break_ins -> . BREAK expresiones
    (37) start_if -> . IF expresiones DP LI list_exp_ins LD
    (38) start_if -> . IF expresiones DP LI list_exp_ins LD ELSE DP LI list_exp_ins LD
    (39) start_if -> . IF expresiones DP LI list_exp_ins LD lista_elif
    (40) start_if -> . IF expresiones DP LI list_exp_ins LD lista_elif ELSE DP LI list_exp_ins LD
    (56) start_for -> . FOR ID IN opciones_for LI lista_bloque LD
    (51) llamada -> . ID PI PD
    (52) llamada -> . ID PI lista_expres PD
    (46) return_ins -> . RETURN
    (47) return_ins -> . RETURN expresiones
    (48) asignacion -> . ID IGUAL expresiones
    (59) asignacion_arreglo -> . acceso_arreglo IGUAL expresiones
    (60) acceso_arreglo -> . ID dimensiones

  ! shift/reduce conflict for LD resolved as shift
  ! shift/reduce conflict for PRINTLN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    LD              shift and go to state 36
    PRINTLN         shift and go to state 23
    PRINT           shift and go to state 24
    ID              shift and go to state 25
    WHILE           shift and go to state 26
    BREAK           shift and go to state 27
    IF              shift and go to state 28
    FOR             shift and go to state 29
    RETURN          shift and go to state 30

  ! LD              [ reduce using rule 19 (bloque -> .) ]
  ! PRINTLN         [ reduce using rule 19 (bloque -> .) ]
  ! PRINT           [ reduce using rule 19 (bloque -> .) ]
  ! ID              [ reduce using rule 19 (bloque -> .) ]
  ! WHILE           [ reduce using rule 19 (bloque -> .) ]
  ! BREAK           [ reduce using rule 19 (bloque -> .) ]
  ! IF              [ reduce using rule 19 (bloque -> .) ]
  ! FOR             [ reduce using rule 19 (bloque -> .) ]
  ! RETURN          [ reduce using rule 19 (bloque -> .) ]

    bloque                         shift and go to state 37
    impresiones                    shift and go to state 13
    declaracion                    shift and go to state 14
    start_while                    shift and go to state 15
    break_ins                      shift and go to state 16
    start_if                       shift and go to state 17
    start_for                      shift and go to state 18
    llamada                        shift and go to state 19
    return_ins                     shift and go to state 20
    asignacion                     shift and go to state 21
    asignacion_arreglo             shift and go to state 22
    acceso_arreglo                 shift and go to state 31

state 12

    (8) lista_bloque -> bloque .

    LD              reduce using rule 8 (lista_bloque -> bloque .)
    PRINTLN         reduce using rule 8 (lista_bloque -> bloque .)
    PRINT           reduce using rule 8 (lista_bloque -> bloque .)
    ID              reduce using rule 8 (lista_bloque -> bloque .)
    WHILE           reduce using rule 8 (lista_bloque -> bloque .)
    BREAK           reduce using rule 8 (lista_bloque -> bloque .)
    IF              reduce using rule 8 (lista_bloque -> bloque .)
    FOR             reduce using rule 8 (lista_bloque -> bloque .)
    RETURN          reduce using rule 8 (lista_bloque -> bloque .)


state 13

    (9) bloque -> impresiones .

    LD              reduce using rule 9 (bloque -> impresiones .)
    PRINTLN         reduce using rule 9 (bloque -> impresiones .)
    PRINT           reduce using rule 9 (bloque -> impresiones .)
    ID              reduce using rule 9 (bloque -> impresiones .)
    WHILE           reduce using rule 9 (bloque -> impresiones .)
    BREAK           reduce using rule 9 (bloque -> impresiones .)
    IF              reduce using rule 9 (bloque -> impresiones .)
    FOR             reduce using rule 9 (bloque -> impresiones .)
    RETURN          reduce using rule 9 (bloque -> impresiones .)
    NOT             reduce using rule 9 (bloque -> impresiones .)
    RESTA           reduce using rule 9 (bloque -> impresiones .)
    PI              reduce using rule 9 (bloque -> impresiones .)
    ENTERO          reduce using rule 9 (bloque -> impresiones .)
    FLOAT           reduce using rule 9 (bloque -> impresiones .)
    CADENA          reduce using rule 9 (bloque -> impresiones .)
    CARACTER        reduce using rule 9 (bloque -> impresiones .)
    TRUE            reduce using rule 9 (bloque -> impresiones .)
    FALSE           reduce using rule 9 (bloque -> impresiones .)
    CI              reduce using rule 9 (bloque -> impresiones .)
    TIPOINT         reduce using rule 9 (bloque -> impresiones .)
    TIPOFLOAT       reduce using rule 9 (bloque -> impresiones .)
    TIPOCHAR        reduce using rule 9 (bloque -> impresiones .)
    TIPOSTRING      reduce using rule 9 (bloque -> impresiones .)
    TIPOBOOL        reduce using rule 9 (bloque -> impresiones .)


state 14

    (10) bloque -> declaracion .

    LD              reduce using rule 10 (bloque -> declaracion .)
    PRINTLN         reduce using rule 10 (bloque -> declaracion .)
    PRINT           reduce using rule 10 (bloque -> declaracion .)
    ID              reduce using rule 10 (bloque -> declaracion .)
    WHILE           reduce using rule 10 (bloque -> declaracion .)
    BREAK           reduce using rule 10 (bloque -> declaracion .)
    IF              reduce using rule 10 (bloque -> declaracion .)
    FOR             reduce using rule 10 (bloque -> declaracion .)
    RETURN          reduce using rule 10 (bloque -> declaracion .)
    NOT             reduce using rule 10 (bloque -> declaracion .)
    RESTA           reduce using rule 10 (bloque -> declaracion .)
    PI              reduce using rule 10 (bloque -> declaracion .)
    ENTERO          reduce using rule 10 (bloque -> declaracion .)
    FLOAT           reduce using rule 10 (bloque -> declaracion .)
    CADENA          reduce using rule 10 (bloque -> declaracion .)
    CARACTER        reduce using rule 10 (bloque -> declaracion .)
    TRUE            reduce using rule 10 (bloque -> declaracion .)
    FALSE           reduce using rule 10 (bloque -> declaracion .)
    CI              reduce using rule 10 (bloque -> declaracion .)
    TIPOINT         reduce using rule 10 (bloque -> declaracion .)
    TIPOFLOAT       reduce using rule 10 (bloque -> declaracion .)
    TIPOCHAR        reduce using rule 10 (bloque -> declaracion .)
    TIPOSTRING      reduce using rule 10 (bloque -> declaracion .)
    TIPOBOOL        reduce using rule 10 (bloque -> declaracion .)


state 15

    (11) bloque -> start_while .

    LD              reduce using rule 11 (bloque -> start_while .)
    PRINTLN         reduce using rule 11 (bloque -> start_while .)
    PRINT           reduce using rule 11 (bloque -> start_while .)
    ID              reduce using rule 11 (bloque -> start_while .)
    WHILE           reduce using rule 11 (bloque -> start_while .)
    BREAK           reduce using rule 11 (bloque -> start_while .)
    IF              reduce using rule 11 (bloque -> start_while .)
    FOR             reduce using rule 11 (bloque -> start_while .)
    RETURN          reduce using rule 11 (bloque -> start_while .)
    NOT             reduce using rule 11 (bloque -> start_while .)
    RESTA           reduce using rule 11 (bloque -> start_while .)
    PI              reduce using rule 11 (bloque -> start_while .)
    ENTERO          reduce using rule 11 (bloque -> start_while .)
    FLOAT           reduce using rule 11 (bloque -> start_while .)
    CADENA          reduce using rule 11 (bloque -> start_while .)
    CARACTER        reduce using rule 11 (bloque -> start_while .)
    TRUE            reduce using rule 11 (bloque -> start_while .)
    FALSE           reduce using rule 11 (bloque -> start_while .)
    CI              reduce using rule 11 (bloque -> start_while .)
    TIPOINT         reduce using rule 11 (bloque -> start_while .)
    TIPOFLOAT       reduce using rule 11 (bloque -> start_while .)
    TIPOCHAR        reduce using rule 11 (bloque -> start_while .)
    TIPOSTRING      reduce using rule 11 (bloque -> start_while .)
    TIPOBOOL        reduce using rule 11 (bloque -> start_while .)


state 16

    (12) bloque -> break_ins .

    LD              reduce using rule 12 (bloque -> break_ins .)
    PRINTLN         reduce using rule 12 (bloque -> break_ins .)
    PRINT           reduce using rule 12 (bloque -> break_ins .)
    ID              reduce using rule 12 (bloque -> break_ins .)
    WHILE           reduce using rule 12 (bloque -> break_ins .)
    BREAK           reduce using rule 12 (bloque -> break_ins .)
    IF              reduce using rule 12 (bloque -> break_ins .)
    FOR             reduce using rule 12 (bloque -> break_ins .)
    RETURN          reduce using rule 12 (bloque -> break_ins .)
    NOT             reduce using rule 12 (bloque -> break_ins .)
    RESTA           reduce using rule 12 (bloque -> break_ins .)
    PI              reduce using rule 12 (bloque -> break_ins .)
    ENTERO          reduce using rule 12 (bloque -> break_ins .)
    FLOAT           reduce using rule 12 (bloque -> break_ins .)
    CADENA          reduce using rule 12 (bloque -> break_ins .)
    CARACTER        reduce using rule 12 (bloque -> break_ins .)
    TRUE            reduce using rule 12 (bloque -> break_ins .)
    FALSE           reduce using rule 12 (bloque -> break_ins .)
    CI              reduce using rule 12 (bloque -> break_ins .)
    TIPOINT         reduce using rule 12 (bloque -> break_ins .)
    TIPOFLOAT       reduce using rule 12 (bloque -> break_ins .)
    TIPOCHAR        reduce using rule 12 (bloque -> break_ins .)
    TIPOSTRING      reduce using rule 12 (bloque -> break_ins .)
    TIPOBOOL        reduce using rule 12 (bloque -> break_ins .)


state 17

    (13) bloque -> start_if .

    LD              reduce using rule 13 (bloque -> start_if .)
    PRINTLN         reduce using rule 13 (bloque -> start_if .)
    PRINT           reduce using rule 13 (bloque -> start_if .)
    ID              reduce using rule 13 (bloque -> start_if .)
    WHILE           reduce using rule 13 (bloque -> start_if .)
    BREAK           reduce using rule 13 (bloque -> start_if .)
    IF              reduce using rule 13 (bloque -> start_if .)
    FOR             reduce using rule 13 (bloque -> start_if .)
    RETURN          reduce using rule 13 (bloque -> start_if .)


state 18

    (14) bloque -> start_for .

    LD              reduce using rule 14 (bloque -> start_for .)
    PRINTLN         reduce using rule 14 (bloque -> start_for .)
    PRINT           reduce using rule 14 (bloque -> start_for .)
    ID              reduce using rule 14 (bloque -> start_for .)
    WHILE           reduce using rule 14 (bloque -> start_for .)
    BREAK           reduce using rule 14 (bloque -> start_for .)
    IF              reduce using rule 14 (bloque -> start_for .)
    FOR             reduce using rule 14 (bloque -> start_for .)
    RETURN          reduce using rule 14 (bloque -> start_for .)
    NOT             reduce using rule 14 (bloque -> start_for .)
    RESTA           reduce using rule 14 (bloque -> start_for .)
    PI              reduce using rule 14 (bloque -> start_for .)
    ENTERO          reduce using rule 14 (bloque -> start_for .)
    FLOAT           reduce using rule 14 (bloque -> start_for .)
    CADENA          reduce using rule 14 (bloque -> start_for .)
    CARACTER        reduce using rule 14 (bloque -> start_for .)
    TRUE            reduce using rule 14 (bloque -> start_for .)
    FALSE           reduce using rule 14 (bloque -> start_for .)
    CI              reduce using rule 14 (bloque -> start_for .)
    TIPOINT         reduce using rule 14 (bloque -> start_for .)
    TIPOFLOAT       reduce using rule 14 (bloque -> start_for .)
    TIPOCHAR        reduce using rule 14 (bloque -> start_for .)
    TIPOSTRING      reduce using rule 14 (bloque -> start_for .)
    TIPOBOOL        reduce using rule 14 (bloque -> start_for .)


state 19

    (15) bloque -> llamada .

    LD              reduce using rule 15 (bloque -> llamada .)
    PRINTLN         reduce using rule 15 (bloque -> llamada .)
    PRINT           reduce using rule 15 (bloque -> llamada .)
    ID              reduce using rule 15 (bloque -> llamada .)
    WHILE           reduce using rule 15 (bloque -> llamada .)
    BREAK           reduce using rule 15 (bloque -> llamada .)
    IF              reduce using rule 15 (bloque -> llamada .)
    FOR             reduce using rule 15 (bloque -> llamada .)
    RETURN          reduce using rule 15 (bloque -> llamada .)


state 20

    (16) bloque -> return_ins .

    LD              reduce using rule 16 (bloque -> return_ins .)
    PRINTLN         reduce using rule 16 (bloque -> return_ins .)
    PRINT           reduce using rule 16 (bloque -> return_ins .)
    ID              reduce using rule 16 (bloque -> return_ins .)
    WHILE           reduce using rule 16 (bloque -> return_ins .)
    BREAK           reduce using rule 16 (bloque -> return_ins .)
    IF              reduce using rule 16 (bloque -> return_ins .)
    FOR             reduce using rule 16 (bloque -> return_ins .)
    RETURN          reduce using rule 16 (bloque -> return_ins .)
    NOT             reduce using rule 16 (bloque -> return_ins .)
    RESTA           reduce using rule 16 (bloque -> return_ins .)
    PI              reduce using rule 16 (bloque -> return_ins .)
    ENTERO          reduce using rule 16 (bloque -> return_ins .)
    FLOAT           reduce using rule 16 (bloque -> return_ins .)
    CADENA          reduce using rule 16 (bloque -> return_ins .)
    CARACTER        reduce using rule 16 (bloque -> return_ins .)
    TRUE            reduce using rule 16 (bloque -> return_ins .)
    FALSE           reduce using rule 16 (bloque -> return_ins .)
    CI              reduce using rule 16 (bloque -> return_ins .)
    TIPOINT         reduce using rule 16 (bloque -> return_ins .)
    TIPOFLOAT       reduce using rule 16 (bloque -> return_ins .)
    TIPOCHAR        reduce using rule 16 (bloque -> return_ins .)
    TIPOSTRING      reduce using rule 16 (bloque -> return_ins .)
    TIPOBOOL        reduce using rule 16 (bloque -> return_ins .)


state 21

    (17) bloque -> asignacion .
